--- a/pom.xml
+++ b/pom.xml
@@ -11,30 +11,22 @@
 
 	<name>Projet formation demo</name>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-		<dependency.spring-boot.version>1.3.5.RELEASE</dependency.spring-boot.version>
-		<dependency.hibernate-validator.version>5.1.3.Final</dependency.hibernate-validator.version>
-		<dependency.junit.version>4.12</dependency.junit.version>
-	</properties>
-
 	<build>
 		<plugins>
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${plugin.spring-boot.version}</version>
+				<version>1.3.5.RELEASE</version>
 				<configuration>
 					<mainClass>com.zenika.formation.Demo</mainClass>
 				</configuration>
@@ -51,7 +43,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-dependencies</artifactId>
-			<version>${dependency.spring-boot.version}</version>
+			<version>1.3.5.RELEASE</version>
 			<type>pom</type>
 			<scope>import</scope>
 		</dependency>
@@ -60,37 +52,30 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-			<version>${dependency.spring-boot.version}</version>
+			<version>1.3.5.RELEASE</version>
 		</dependency>
 
 		<!-- Spring-boot Starter kit : for test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>${dependency.spring-boot.version}</version>
+			<version>1.3.5.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Junit tests -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${dependency.junit.version}</version>
-			<scope>test</scope>
-		</dependency>
 
 		<!-- Spring-boot Starter kit : webapp -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>${dependency.spring-boot.version}</version>
+			<version>1.3.5.RELEASE</version>
 		</dependency>
 
 		<!-- Spring-boot Starter kit : embedded jetty -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jetty</artifactId>
-			<version>${dependency.spring-boot.version}</version>
+			<version>1.3.5.RELEASE</version>
 		</dependency>
 
 		<!-- Unit tests -->
@@ -98,7 +83,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
-			<version>${dependency.junit.version}</version>
+			<version>4.12</version>
 		</dependency>
 
 
@@ -106,7 +91,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>${dependency.hibernate-validator.version}</version>
+			<version>5.1.3.Final</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
